examples/type_system/failing/18_handle_incomplete_operation_set.flx
// E402: handler is missing one or more declared effect operations.

effect Console {
    print: String -> ()
    read: () -> String
}

perform Console.print("hello") handle Console {
    print(resume, msg) -> do {
        print(msg)
        resume(())
    }
}
